Fixed z-index issue with project-card

--- a/src/app/projects/projects-card-list/projects-card-list.component.scss
+++ b/src/app/projects/projects-card-list/projects-card-list.component.scss
@@ -1,6 +1,12 @@
 @import './../../../assets/styles/variables';
 
 .cart {
+    position: relative;
+    z-index: 1;
+    margin-bottom: 100px;
+    h3 {
+        margin-bottom: 0px;
+    }
     .read-more {
         opacity: 0;
     }
